<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
android:background="@color/colorPrimaryDark">

	<android.support.design.widget.AppBarLayout
			android:layout_width="match_parent"
			android:layout_height="256dp"
			android:fitsSystemWindows="true"
			android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

		<android.support.design.widget.CollapsingToolbarLayout
				android:id="@+id/collapsingToolbar"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
				app:expandedTitleMarginStart="16dp"
				android:elevation="8dp"
				android:fitsSystemWindows="true"
				app:contentScrim="@color/toolbar"
				app:layout_scrollFlags="scroll|exitUntilCollapsed"
				app:statusBarScrim="@color/alpha_40">

			<ImageView
					android:id="@+id/thumb"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:fitsSystemWindows="true"
					android:scaleType="centerCrop"
					android:transitionName="@string/transitionImage"
					app:layout_collapseMode="pin" />

			<android.support.v7.widget.Toolbar
					android:id="@+id/toolbar"
					android:layout_width="match_parent"
					android:layout_height="?android:actionBarSize"
					android:elevation="8dp"
					app:layout_collapseMode="pin"/>
		</android.support.design.widget.CollapsingToolbarLayout>
	</android.support.design.widget.AppBarLayout>

	<android.support.constraint.ConstraintLayout
			app:layout_behavior="@string/appbar_scrolling_view_behavior"
			android:clipToPadding="false"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp">

		<TextView
			android:id="@+id/descriptionTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textStyle="bold"
			android:text="@string/description"/>

		<TextView
			android:id="@+id/description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toRightOf="@id/descriptionTextView"
			android:ellipsize="marquee"
			android:singleLine="true"
			android:scrollHorizontally="true"
			android:focusableInTouchMode="true"
			android:marqueeRepeatLimit="marquee_forever"
			android:layout_marginLeft="5dp"/>

		<TextView
			android:id="@+id/durationTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
			android:textStyle="bold"
			android:text="@string/duration"/>

		<TextView
				android:id="@+id/duration"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp"
				app:layout_constraintLeft_toRightOf="@id/durationTextView"
				app:layout_constraintBottom_toBottomOf="@id/durationTextView"
				android:layout_marginLeft="5dp"/>

		<TextView
				android:id="@+id/favoritesTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintTop_toBottomOf="@id/durationTextView"
				android:layout_marginTop="10dp"
				android:textStyle="bold"
				android:text="@string/favorites"/>
		<TextView
				android:id="@+id/favorites"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				app:layout_constraintLeft_toRightOf="@id/favoritesTextView"
				app:layout_constraintBottom_toBottomOf="@id/favoritesTextView"
				android:layout_marginLeft="5dp"/>

		<TextView
				android:id="@+id/fullEpisodeTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				app:layout_constraintTop_toBottomOf="@id/favoritesTextView"
				android:textStyle="bold"
				android:text="@string/fullEpisode"/>
		<TextView
				android:id="@+id/fullEpisode"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				app:layout_constraintLeft_toRightOf="@id/fullEpisodeTextView"
				app:layout_constraintBottom_toBottomOf="@id/fullEpisodeTextView"
				android:layout_marginLeft="5dp"/>
		<TextView
				android:id="@+id/kindTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				app:layout_constraintTop_toBottomOf="@id/fullEpisodeTextView"
				android:textStyle="bold"
				android:text="@string/kind"/>
		<TextView
				android:id="@+id/kind"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintLeft_toRightOf="@id/kindTextView"
				app:layout_constraintBottom_toBottomOf="@id/kindTextView"
				android:layout_marginTop="10dp"
				android:layout_marginLeft="5dp"/>

		<TextView
				android:id="@+id/programTypeTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				app:layout_constraintTop_toBottomOf="@id/kindTextView"
				android:textStyle="bold"
				android:text="@string/programType"/>
		<TextView
				android:id="@+id/programType"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintLeft_toRightOf="@id/programTypeTextView"
				app:layout_constraintBottom_toBottomOf="@id/programTypeTextView"
				android:layout_marginLeft="5dp"
				android:layout_marginTop="10dp"/>
		<TextView
				android:id="@+id/programIDTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				app:layout_constraintTop_toBottomOf="@id/programTypeTextView"
				android:textStyle="bold"
				android:text="@string/programid"/>
		<TextView
				android:id="@+id/programID"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				app:layout_constraintLeft_toRightOf="@id/programIDTextView"
				app:layout_constraintBottom_toBottomOf="@id/programIDTextView"
				android:layout_marginLeft="5dp"/>
		<TextView
				android:id="@+id/serviceIDTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				app:layout_constraintTop_toBottomOf="@id/programIDTextView"
				android:textStyle="bold"
				android:text="@string/serviceid"/>
		<TextView
				android:id="@+id/serviceID"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintLeft_toRightOf="@id/serviceIDTextView"
				android:layout_marginTop="10dp"
				app:layout_constraintBottom_toBottomOf="@id/serviceIDTextView"
				android:layout_marginLeft="5dp"/>

		<TextView
				android:id="@+id/videoIDTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				app:layout_constraintTop_toBottomOf="@id/serviceIDTextView"
				android:textStyle="bold"
				android:text="@string/videoid"/>
		<TextView
				android:id="@+id/videoID"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				app:layout_constraintLeft_toRightOf="@id/videoIDTextView"
				app:layout_constraintBottom_toBottomOf="@id/videoIDTextView"
				android:layout_marginLeft="5dp"/>
	</android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>